# whitebox-aes-rs

./: .gitignore  Cargo.toml  DEV_NOTES.md  LICENSE  README.md
.github/workflows/: ci.yml
benches/: wbaes_bench.rs
crates/aes-core/: Cargo.toml
crates/aes-core/src/: block.rs  cipher.rs  key.rs  lib.rs  round.rs  sbox.rs
crates/wbaes-cli/: Cargo.toml
crates/wbaes-cli/src/: main.rs
crates/wbaes-gen/: Cargo.toml
crates/wbaes-gen/src/: affine.rs  generator.rs  instance.rs  lib.rs  linear.rs  matrix.rs  tables.rs
crates/wbaes-runtime/: Cargo.toml
crates/wbaes-runtime/src/: lib.rs
docs/: design.md  whitebox_background.md
examples/: basic.rs
