[package]
name = "wbaes-gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "White-box AES instance generator implementing Baek–Cheon–Hong revisited scheme"

[dependencies]
aes-core = { path = "../aes-core" }
bincode = "1"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
criterion = { workspace = true, optional = true }

[dev-dependencies]
rand_chacha = "0.3"
criterion = { workspace = true }
