[package]
name = "wbaes-runtime"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Runtime evaluator for white-box AES instances"

[dependencies]
wbaes-gen = { path = "../wbaes-gen" }
aes-core = { path = "../aes-core" }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
